--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                 <div class=" w-full self-end px-4 lg:w-1/2">
                     <div class="mt-10 relative lg:mt-0 lg:right-0">
                         <img src="src/img/2.png" alt="Al-Hafidh Mailisman" class="max-w-full mx-auto relative z-10">
-                        <span class="absolute -bottom-0 left-1/2 -translate-x-1/2 md:scale-110">
+                        <span class="absolute -bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                                <path fill="#14b8a6" d="M29.1,-42C33.5,-31.1,29.7,-17.8,30.1,-6.7C30.5,4.5,34.9,13.6,35.2,27.1C35.5,40.6,31.7,58.5,19.8,69.4C7.9,80.2,-12.1,84.1,-26.5,77C-40.9,69.9,-49.9,51.9,-59.1,34.7C-68.3,17.5,-77.9,1,-77,-15.3C-76.2,-31.6,-64.9,-47.8,-50.4,-56.9C-35.8,-66.1,-17.9,-68.1,-2.8,-64.9C12.4,-61.6,24.8,-52.9,29.1,-42Z" transform="translate(100 100) scale(1.1)" />
-                            </svg>
+                                <path fill="#14b8a6" d="M36.6,23.1C24,43,-25.8,43.3,-38.1,23.6C-50.4,3.9,-25.2,-35.9,-0.3,-36.1C24.6,-36.2,49.2,3.2,36.6,23.1Z" transform="translate(100 100) scale(1.1)" />
+                              </svg>
                         </span>
                     </div>
                 </div>
