--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Tailwind CSS</title>
+    <link rel="shortcut icon" href="src/img/a.png" type="image/x-icon" />
     <link href="src/css/final.css" rel="stylesheet">
     <script>
         document.documentElement.classList.toggle(
